# SeratoCloneSampler

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
github/workflows/: build-mac.yml
